--- a/playbook/site.yml
+++ b/playbook/site.yml
@@ -2,3 +2,7 @@
 - hosts: all
 - import_playbook: ../static-assignments/common.yml
 
+ - import_playbook: ../static-assignments/common-del.yml
+
+ 
+
